--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,13 +30,13 @@ server.port=8080
 spring.application.name=github-data-service
 
 #Datasource configurations
-spring.datasource.url=jdbc:h2:mem:github-db
+spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:github-db}
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.generate-ddl=true
 
-github.base.url=https://api.github.com
+github.base.url=${GITHUB_BASE_URL:https://api.github.com}
 github.api.key=${GITHUB_API_KEY:unauthorized}
 
 github.search.language=${SEARCH_LANGUAGE:java}
